# python_news

./: .gitignore  pyproject.toml
python_news/python3_10/: aa_pep_634.py
python_news/python3_11/: TODO.py  ab_pep_763.py
python_news/python3_7/: aa_pep_563.py  aac_pep_557.py  ab_pep_567.py
python_news/python3_8/: TODO.py  aa_pep_572.py  ab_pep_570.py  ac_f_strings.py  ad_misc.py  ae_pep_544.py
python_news/python3_9/: aa_pep_584.py  ab_pep_585.py  ac_pep_615.py  ac_pep_616.py
